tests/NormalTests/paczka1/small_fuzzy/11575848.err
Error in line 1: gkJf3rOyPU A258 84,6
Error in line 2: gkJf3rOyPU A887 77,2
Error in line 3: Rjk1h A256 435,8
Error in line 6: gkJf3rOyPU A258 13,8
Error in line 9: gkJf3rOyPU A887 28,5
